--- a/plugins/status/app/views/status/edit.html.erb
+++ b/plugins/status/app/views/status/edit.html.erb
@@ -15,35 +15,49 @@
   </ul>
 
   <% @graphs.each do |group| %>
-  
     <fieldset id=<%= group.id %> class="ui-tab">
       <legend><%= group.id %></legend>    
-      
         <br>	
         <p>Alarm, if</p>
         <p>
         <div class="table">
         <table class="list">
           <% group.single_graphs.each do |single_graph| %>
+            <% if group.single_graphs.size > 1 %>
+              <tr>
+                <td width="180">
+                   <b><%= "#{single_graph.headline}" %></b>
+                </td>
+              <tr>
+            <% end %>
             <% single_graph.lines.each do |line| %>
-             <tr>
-
-               <td width="180">
-                 <%= "#{single_graph.headline} / #{line.label}  " %>
-               </td>
-               <td width="60">
-                 <select name="measurement">
-                    <option value="0">undercuts</option>
-                    <option value="1">exceeds</option>
-                 </select>
-               </td>
-               <td width="10">
-                 <input name="" type="text"> 
-               </td>
-               <td>
-                 <%= "#{group.y_label}" %>
-               </td>
-             </tr>
+              <% limit_key = "#{group.id}/#{single_graph.headline}/#{line.label}" 
+                 measurements = {_("undercuts") => "min", _("exceeds") => "max"}
+                 if line.limits.max.to_i > 0
+                    val = line.limits.max.to_i
+                    measurement = "max"
+                 elsif line.limits.min.to_i > 0
+                    val = line.limits.min.to_i
+                    measurement = "min"
+                 else
+                    val = ""
+                    measurement = "max"
+                 end
+              %>
+              <tr>
+                <td width="180">
+                  <%= "#{line.label}" %>
+                </td>
+                <td>
+                  <%= select_tag("measurement/"+limit_key, options_for_select(measurements, measurement), :disabled => write_disabled)%>
+                </td>
+                <td>
+                  <%=text_field_tag "value/"+limit_key, val, :disabled => write_disabled %>
+                </td>
+                <td>
+                  <%= "#{group.y_label}" %>
+                </td>
+              </tr>
             <% end %>
           <% end %>
         </table>
