--- a/plugins/status/app/views/status/edit.html.erb
+++ b/plugins/status/app/views/status/edit.html.erb
@@ -1,4 +1,4 @@
-<% write_disabled = !true %>
+<% write_disabled = !@permissions[:writelimits] %>
 
 <% content_for :head do %>
    <%= javascript_include_tag :defaults %>
