move jplot stuff to status module; It is not needed in other modules

--- a/plugins/status/app/views/status/index.html.erb
+++ b/plugins/status/app/views/status/index.html.erb
@@ -1,6 +1,9 @@
 
 <% content_for :head do %>
 
+<!--[if IE]><script type="text/javascript" charset="utf-8" src="/javascripts/excanvas.js"></script><![endif]-->
+<script type="text/javascript" charset="utf-8" src="/javascripts/jquery.jqplot.js"></script>
+<script type="text/javascript" charset="utf-8" src="/javascripts/plugin/jqplot.pieRenderer.js"></script>
 <script type="text/javascript" charset="utf-8" src="javascripts/plugin/jqplot.categoryAxisRenderer.js"></script>
 <script type="text/javascript" charset="utf-8" src="javascripts/plugin/jqplot.dateAxisRenderer.js"></script>
 <script type="text/javascript" charset="utf-8" src="javascripts/plugin/jqplot.canvasTextRenderer.js"></script>
