--- a/plugins/services/app/views/services/index.rhtml
+++ b/plugins/services/app/views/services/index.rhtml
@@ -1,5 +1,15 @@
 <%= javascript_include_tag :defaults %>
 
+<script type="text/javascript">
+<!--
+    function show_hide(id) {
+	var elementmode = document.getElementById(id).style;
+	elementmode.display = (!elementmode.display) ? 'none' : '';
+    }   
+//-->
+</script>
+
+
 <!-- begin: dialog box -->
 <div id="resultdlg">
 </div>
@@ -25,7 +35,12 @@ end
 <ul>
 <% @services.each do |service| %>
 <li><b><%=h service.name %></b>
+
+<a href="#" onclick="show_hide('service_description_<%=service.name%>');">(description)</a>
+
+<div id='service_description_<%=service.name%>' style="display: none;">
 <i><%=h service.description unless service.description.nil? %></i>
+</div> 
 
 <img src="/images/working.gif" height="12" width="12" border="0"
     id="service_progress_<%=service.name%>" style="display: none" alt='working...'/>
