set timeframe for EACH graph

--- a/plugins/status/app/views/status/index.html.erb
+++ b/plugins/status/app/views/status/index.html.erb
@@ -56,38 +56,37 @@ $(document).ready(function() {initMenuBar();});
   <ul id="menu">
   <% @graphs.each do |group| %>
     <li>
-      <% graph_div_id = graph_id(group.id, group.single_graphs.first.headline) %>
       <% if limits_reached(group) %>
         <% status_icon = "<div class='status-icon error'></div>" %>
       <% else %>
          <% status_icon = "<div class='status-icon ok'></div>" %>
       <% end %>
-      <%=link_to_remote status_icon + group.id, :update => graph_div_id,
+      <%=link_to_remote status_icon + group.id, :update => graph_id(group.id, group.single_graphs.first.headline),
         :url => { :action => "evaluate_values", :group_id => group.id, :graph_id => group.single_graphs.first.headline },
         :complete => evaluate_next_graph(group.id, group.single_graphs, 1 )%>
       <ul>
-         <p>
-          <% measurement_id = "measurement_" + group.id %>
-          <%= _("Show last") %> <select name="<%=measurement_id%>" id="<%=measurement_id%>">
+
+          <% group.single_graphs.each do |single_graph| %>
+            <p>     
+              <h3><%= single_graph.headline %></h3>    
+            </p>
+            <p>
+              <% measurement_id = "measurement_" + group.id + "_" + single_graph.headline%>
+              <%= _("Show last") %> <select name="<%=measurement_id%>" id="<%=measurement_id%>">
 		<option value="5"><%= _("5 Minutes") %></option>
 		<option value="15"><%= _("15 Minutes") %></option>
 		<option value="30"><%= _("30 Minutes") %></option>
 		<option value="60"><%= _("1 Hour") %></option>
 		<option value="360"><%= _("6 Hours") %></option>
 		<option value="720"><%= _("12 Hours") %></option>
-          </select>
-          </p>
-          <%= observe_field(measurement_id,
-            :update => graph_div_id,
-            :frequency => 0.25,
-            :loading => "$('#progress').show()",
-            :url => { :action => "evaluate_values", :group_id => group.id, :graph_id => group.single_graphs.first.headline },
-            :complete => evaluate_next_graph(group.id, group.single_graphs, 1 ),
-            :with => "'minutes=' + value" ) %>
-
-          <% group.single_graphs.each do |single_graph| %>
-            <p>     
-              <h3><%= single_graph.headline %></h3>    
+              </select>
+              <%= observe_field(measurement_id,
+                :update => graph_id(group.id, single_graph.headline),
+                :frequency => 0.25,
+                :loading => "$('#progress').show()",
+                :url => { :action => "evaluate_values", :group_id => group.id, :graph_id => single_graph.headline },
+                :complete => "$('#progress').hide()",
+                :with => "'minutes=' + value" ) %>
             </p>
             <p>         
               <%= graph(graph_id(group.id, single_graph.headline), 400, 300) %>
