--- a/plugins/status/app/views/status/index.html.erb
+++ b/plugins/status/app/views/status/index.html.erb
@@ -1,12 +1,11 @@
 
 <% content_for :head do %>
 
-<!--[if IE]><script type="text/javascript" charset="utf-8" src="/javascripts/excanvas.js"></script><![endif]-->
-<script type="text/javascript" charset="utf-8" src="/javascripts/jquery.jqplot.js"></script>
-<script type="text/javascript" charset="utf-8" src="/javascripts/plugin/jqplot.pieRenderer.js"></script>
-<script type="text/javascript" charset="utf-8" src="javascripts/plugin/jqplot.categoryAxisRenderer.js"></script>
-<script type="text/javascript" charset="utf-8" src="javascripts/plugin/jqplot.dateAxisRenderer.js"></script>
-<script type="text/javascript" charset="utf-8" src="javascripts/plugin/jqplot.canvasTextRenderer.js"></script>
+<!--[if IE]><%= javascript_include_tag "excanvas.js", :cache => true %><![endif]-->
+<%= javascript_include_tag "jquery.jqplot.js", :cache => true %>
+<%= javascript_include_tag "plugin/jqplot.categoryAxisRenderer.js", :cache => true %>
+<%= javascript_include_tag "plugin/jqplot.dateAxisRenderer.js", :cache => true %>
+<%= javascript_include_tag "plugin/jqplot.canvasTextRenderer.js", :cache => true %>
 
 <script type="text/javascript">
 
