--- a/plugins/services/app/views/services/index.rhtml
+++ b/plugins/services/app/views/services/index.rhtml
@@ -1,57 +1,69 @@
 <%= javascript_include_tag :defaults %>
 
 <script type="text/javascript">
-<!--
-    function show_hide(id) {
-	var elementmode = document.getElementById(id).style;
-	elementmode.display = (!elementmode.display) ? 'none' : '';
-    }   
-//-->
+$(document).ready(function() {
+    $('div#services-list> ul li div.description').hide();
+    $('div#services-list a.toggle-description').hover(function(){
+	$(this).next('div.description').slideDown('slow');
+    },function(){
+	$(this).next('div.description').slideUp('slow');
+    });
+
+})
 </script>
 
+<% unless @permissions[:execute] %>
+<p><%=_("You do not have permission to execute the services. The links are disabled.")%></p>
+<% end %>
 
-<!-- begin: dialog box -->
-<div id="resultdlg">
-</div>
-<!-- end: dialog box -->
 
+<%
+custom	= false
+[ @services, @custom_services ].each do |service_list|
+
+if custom
+    commands	= [ "start", "stop"]
+else
+    commands	= [ "start", "stop", "restart", "reload" ]
+end
+
+%>
 <div class='plugin-icon'><img src='/icons/yast-system.png' alt=''/><%=
 
-if params.has_key?("custom")
+if custom
     _("Custom Services")
 else
     _("System Services")
 end
 %></div>
+<div class="plugin-content grid_12" id="services-list">
+<ul>
 
-<div class="plugin-content grid_12">
-
-<% if @services.empty? && params.has_key?("custom") %>
+<% if custom && service_list.empty? %>
 <p><%=_("No custom service is defined on target machine.") %></p>
-<% elsif ! @permissions[:execute] %>
-<p><%=_("You do not have permission to execute the services. The links are disabled.")%></p>
 <% end %>
 
-<ul>
-<% @services.each do |service| %>
-<li><b><%=h service.name %></b>
+<% service_list.each do |service| %>
+  <li>
 
-<a href="#" onclick="show_hide('service_description_<%=service.name%>');">(description)</a>
+  <b><%=h service.name %></b>
 
-<div id='service_description_<%=service.name%>' style="display: none;">
-<i><%=h service.description unless service.description.nil? %></i>
-</div> 
+  <a href="#" class="toggle-description"><img alt="Toggle service description" src="/images/loupe-icon.png" /></a>
 
-<img src="/images/working.gif" height="12" width="12" border="0"
+  <div class='description'>
+    <i><%=h service.description unless service.description.nil? %></i>
+  </div> 
+
+  <img src="/images/working.gif" height="12" width="12" border="0"
     id="service_progress_<%=service.name%>" style="display: none" alt='working...'/>
 
-<span class='service_status' id='service_status_<%=service.name%>'>
-<% unless service.status.nil? %>
-<%= render :partial => 'status', :object => service.status %>
-<% end %>
-</span>
+  <span class='service_status' id='service_status_<%=service.name%>'>
+    <% unless service.status.nil? %>
+    <%= render :partial => 'status', :object => service.status %>
+    <% end %>
+  </span>
 
-  <% [ "start", "stop" ].each do |cmd|
+  <% commands.each do |cmd|
 	if @permissions[:execute] %>
 	    <%=
 		url	= {
@@ -59,13 +71,13 @@ end
 		    :action	=> "execute", 
 		    :service_id	=> service.name 
 		}
-		url[:custom]	= 1 if params.has_key?("custom")
+		url[:custom]	= 1 if custom
 		status_url	= {
 		    :controler	=> :services,
 		    :action	=> :show_status,
 		    :id		=> service.name 
 		}
-		status_url[:custom]	= 1 if params.has_key?("custom")
+		status_url[:custom]	= 1 if custom
 		link_to_remote cmd,
 		    :url	=> url,
 		    :loading	=> "$('#service_progress_#{service.name}').show(); $('#service_status_#{service.name}').hide()",
@@ -86,15 +98,19 @@ end
 	    :id		=> service.name,
 	    :action	=> :show_status
 	}
-	url[:custom]	= 1 if params.has_key?("custom")
+	url[:custom]	= 1 if custom
 
 	link_to_remote _('status'), :update => "service_status_#{service.name}",
 	    :url => url,
 	    :loading  => "$('#service_progress_#{service.name}').show(); $('#service_status_#{service.name}').hide()",
 	    :complete => "$('#service_progress_#{service.name}').hide(); $('#service_status_#{service.name}').show()"
       %>
-</li>
-<% end %>
+  </li>
+  <% end # end of service_list.each %>
+<% custom = true %>
 </ul>
-  <%= link_to _("Back"), '/', :class=>"button" %>
+<%= link_to _("Back"), '/', :class=>"button" %>
 </div>
+<% end %>
+
+
