--- a/plugins/administrator/app/views/administrator/index.html.erb
+++ b/plugins/administrator/app/views/administrator/index.html.erb
@@ -3,48 +3,12 @@
 <div class="plugin-content grid_12">
 <% content_for :head do %>
   <%= javascript_include_tag :defaults %>
+  <%= javascript_include_tag "jquery.kunepassmeter.js" %>
 
   <style type="text/css">
     label.error { display: none; color: red; padding-left: 11.5em; padding-bottom: 1.5em; margin-top: -0.5em; text-align: left; vertical-align: top; width: 50% }
   </style>
 
-  <script type="text/javascript" charset="utf-8" src="/javascripts/jquery.example.js"></script>
-
-	<script language="javascript">
-	 function changeBox()
-	 {
-	    document.getElementById('div1').style.display='none';
-	    document.getElementById('div2').style.display='';
-	    document.getElementById('password').focus();
-	 }
-	 function restoreBox()
-	 {
-	    if(document.getElementById('password').value=='')
-	    {
-	      document.getElementById('div1').style.display='';
-	      document.getElementById('div2').style.display='none';
-	    }
-	 }
-	</script>
-
-	  <script type="text/javascript">
-	    $(function() {
-	      $('#administrator_password').example('Password');
-	    });
-	  </script>
-	
-	  <script type="text/javascript">
-	    $(function() {
-	      $('#administrator_confirm_password').example('Retype password');
-	    });
-	  </script>
-
-	<script type="text/javascript">
-	    $(function() {
-	      $('#administrator_aliases').example('Email adress to receive system mails');
-	    });
-	  </script>
-	
   <script type="text/javascript">
     // define custom validation function
     // alias is actually a list of email aliases
@@ -73,6 +37,8 @@
 	equalTo: "<%= _("The passwords do not match.") -%>",
 	required: "<%= _("A password is required.") -%>"
       });
+
+      $("#administrator_password").attachPassMeter({});
     });
 
     // start password validation workaround only when "Save" button has been pressed
@@ -86,38 +52,21 @@
 
   <% form_for(:administrator, @administrator, :url => { :action => "update" }, :html => { :method => :put, :id => "adminForm", :onsubmit => "$('#progress').show()", :autocomplete => :off } ) do |f| %>
   <%= f.error_messages %>
- 	<fieldset class="grid_12" id="div1">
-		<label><%=_("Password")%></label>
-		<input name="pass_temp" type="text" value="New password for system administrator ('root')" size="20" maxlength="20" onfocus="changeBox()" />
-	</fieldset>
-	<fieldset class="grid_12" id="div2" style="display:none">
-		<label><%=_("Password")%></label>
-		<input name="password" id="password" type="password" value="" size="20" maxlength="20" onBlur="restoreBox()" />
-	</fieldset>
-	<fieldset class="grid_12" id="div1">
-		<label><%=_("Confirm password")%></label>
-		<input name="pass_temp" type="text" value="Retype new password" size="20" maxlength="20" onfocus="changeBox()" />
-	</fieldset>
-	<fieldset class="grid_12" id="div2" style="display:none">
-		<label><%=_("Confirm password")%></label>
-		<input name="password" id="password" type="password" value="" size="20" maxlength="20" onBlur="restoreBox()" />
-	</fieldset>  
-  <fieldset class="grid_12" id="password">
+    <fieldset class="grid_12" id="password">
 	<p><label><%=_("Password")%></label>
 	<!-- onkeyup handler is a workaround for a jQuery bug - it watches only one field for changes in equalTo check -->
 	<%= f.password_field :password, :disabled => disabled, :onkeyup => "if (password_validation_enabled) $('#adminForm').validate().element('#administrator_confirm_password');", :onBlur=>"restoreBox()"  %>
 	</p>
 	<p>
 	<label><%=_("Confirm password")%></label>
-    <%= f.password_field :confirm_password, :disabled => disabled, :equalTo => "#administrator_password", :class => "required" %>
-	<%= f.submit _("Save Password"), :name => "save_password", :disabled => disabled, :onclick=>"password_validation_enabled = true; return $('#adminForm').validate().element('#administrator_confirm_password');", :class=>'cancel' %>
+	<%= f.password_field :confirm_password, :disabled => disabled, :equalTo => "#administrator_password", :class => "required" %>
     </p>
     <!-- this is a pre-generated placeholder for the validation messages -->
     <p><label for="administrator_confirm_password" generated="true" class="error"></label><p>
 	<p>
 	<label><%=_("Forward mail to")%></label>
 	<%= f.text_field :aliases, :disabled => disabled, :class => "emails" %>
-	<%= f.submit _("Save Mail"), :name => "save_aliases", :disabled => disabled, :onclick=>"return $('#adminForm').validate().element('#administrator_aliases');", :class=>'cancel' %>
+	<%= f.submit _("Save Mail Only"), :name => "save_aliases", :disabled => disabled, :onclick=>"return $('#adminForm').validate().element('#administrator_aliases');", :class=>'cancel' %>
 	</p>
     <!-- this is a pre-generated placeholder for the validation messages -->
     <p><label for="administrator_aliases" generated="true" class="error"></label></p>
