--- a/plugins/administrator/app/views/administrator/index.html.erb
+++ b/plugins/administrator/app/views/administrator/index.html.erb
@@ -3,7 +3,7 @@
 <div class="plugin-content grid_12">
 <% content_for :head do %>
   <%= javascript_include_tag :defaults %>
-  <%= javascript_include_tag "jquery.kunepassmeter.js" %>
+  <%= javascript_include_tag "digitalspaghetti.password.js" %>
 
   <style type="text/css">
     label.error { display: none; color: red; padding-left: 11.5em; padding-bottom: 1.5em; margin-top: -0.5em; text-align: left; vertical-align: top; width: 50% }
@@ -38,7 +38,16 @@
 	required: "<%= _("A password is required.") -%>"
       });
 
-      $("#administrator_password").attachPassMeter({});
+      $("#administrator_password").pstrength({
+	  'displayMinChar'	: false,
+	  'verdicts'		: [
+	    "<%= _("Weak") %>",
+	    "<%= _("Normal") %>",
+	    "<%= _("Medium") %>",
+	    "<%= _("Strong") %>",
+	    "<%= _("Very Strong") %>"
+	  ],
+      });
     });
 
     // start password validation workaround only when "Save" button has been pressed
