--- a/plugins/patch_updates/app/views/repositories/index.html.erb
+++ b/plugins/patch_updates/app/views/repositories/index.html.erb
@@ -3,6 +3,7 @@
   <div class='plugin-icon'><img src='/icons/yast-online_update.png'/><%=_("Software Repositories") %></div>
   <div class='plugin-content grid_12'>
   <div class="loading"></div>
+  <% disabled = !@permissions[:write] %>
   <% if @repos.empty? %>
     <h3><%=_("No software repository configured.") %></h3>
   <% else %>
@@ -13,16 +14,15 @@
 	  <th>Alias</th>
 	  <th>Name</th>
 	</tr>
-      <% disabled = !@permissions[:write] %>
       <% @repos.each do |r| %>
 	<tr>
 	  <td align="center"><input type="checkbox" <%= r.enabled ? ' checked' : '' -%> <%= disabled ? 'disabled' : '' -%> /></td>
-	  <td><%= link_to (h r.repo_alias), :action => 'edit', :id => r.repo_alias -%></td>
-	  <td><%= link_to (h r.name), :action => 'edit', :id => r.repo_alias -%></td>
+	  <td><%= link_to (h r.id), :action => 'edit', :id => r.id -%></td>
+	  <td><%= link_to (h r.name), :action => 'edit', :id => r.id -%></td>
 	  <% unless disabled -%>
 	    <td><%= link_to image_tag('/images/delete.png', :alt => "delete"),
-	      {:action => 'delete', :id => r.repo_alias},
-	      {:confirm => _("Really delete repository '%s'?") % h(r.repo_alias), :method => :delete} %>
+	      {:action => 'delete', :id => r.id},
+	      {:confirm => _("Really delete repository '%s'?") % h(r.id), :method => :delete} %>
 	    </td>
 	  <% end -%>
 	</tr>
@@ -32,7 +32,10 @@
 
   <br>
   <%= link_to _("Back"), '/', :class=>"button" %>
-  <%= link_to _("Add"), {:action => 'add'}, :class=>"button" %> <%= _("a new repository") %>
+
+  <% if !disabled %>
+    <%= link_to _("Add"), {:action => 'add'}, :class=>"button" %> <%= _("a new repository") %>
+  <% end %>
 
   </div>
 
