--- a/plugins/patch_updates/app/views/repositories/show.html.erb
+++ b/plugins/patch_updates/app/views/repositories/show.html.erb
@@ -4,7 +4,7 @@
 <br>
 
 
-<% form_for(:repo, @repo, :url => { :action => "update", :id => @repo.id }, :html => { :method => :put } ) do |f| %>
+<% form_for(:repository, @repo, :url => { :action => "update", :id => @repo.id }, :html => { :method => :put } ) do |f| %>
   <%= f.error_messages %>
 
   <div class="table">
@@ -20,36 +20,38 @@
 
     <tr>
 	<td class="first" width="120"><strong><%=_("Enabled")-%></strong></td>
-	<td class="last"><input type="checkbox" <%= @repo.enabled ? ' checked' : '' -%> <%= disabled ? 'disabled' : '' -%>/></td>
+	<td class="last"><%= f.check_box :enabled, :disabled => disabled -%></td>
     </tr>
 
     <tr>
 	<td class="first" width="120"><strong><%=_("Autorefresh")-%></strong></td>
-	<td class="last"><input type="checkbox" <%= @repo.autorefresh ? ' checked' : '' -%> <%= disabled ? 'disabled' : '' -%>/></td>
+	<td class="last"><%= f.check_box :autorefresh, :disabled => disabled -%></td>
     </tr>
 
     <tr>
 	<td class="first" width="120"><strong><%= _("Name") -%></strong></td>
-	<td class="last"> <input type="text" id="parameters[name]" name="parameters[name]" value="<%= h @repo.name -%>" <%= disabled ? 'disabled' : '' -%>/> </td>
+	<td class="last"><%= f.text_field :name, :disabled => disabled -%></td>
     </tr>
 
     <tr>
 	<td class="first" width="120"><strong><%=_("Priority")-%></strong></td>
-	<td class="last"><input type="text" value="<%= @repo.priority-%>" <%= disabled ? 'disabled' : '' -%>/></td>
+	<td class="last"><%= f.text_field :priority, :disabled => disabled -%></td>
     </tr>
 
     <tr>
 	<td class="first" width="120"><strong><%=_("Keep downloaded packages")-%></strong></td>
-	<td class="last"><input type="checkbox" <%= @repo.keep_packages ? ' checked' : '' -%> <%= disabled ? 'disabled' : '' -%>/></td>
+	<td class="last"><%= f.check_box :keep_packages, :disabled => disabled -%></td>
     </tr>
 
     </table>
+
     <br>
     <p>
-    <% if !disabled -%>
-      <%= f.submit _("Update"), :disabled => disabled %>
-    <% end -%>
+      <% if !disabled -%>
+	<%= f.submit _("Update") %>
+      <% end -%>
 
-  <%= link_to _('Back'), {:action => :index}, :onclick=>"$('#progress').show()", :class => "button"-%></p>
+      <%= link_to _('Back'), {:action => :index}, :onclick=>"$('#progress').show()", :class => "button"-%>
+    </p>
   </div>
 <% end %>
