display repository URL in index and update page

--- a/plugins/patch_updates/app/views/repositories/index.html.erb
+++ b/plugins/patch_updates/app/views/repositories/index.html.erb
@@ -13,12 +13,14 @@
 	  <th>Enabled</th>
 	  <th>Alias</th>
 	  <th>Name</th>
+	  <th>URL</th>
 	</tr>
       <% @repos.each do |r| %>
 	<tr>
 	  <td align="center"><input type="checkbox" <%= r.enabled ? ' checked' : '' -%> <%= disabled ? 'disabled' : '' -%> /></td>
 	  <td><%= link_to (h r.id), :action => 'show', :id => r.id -%></td>
 	  <td><%= link_to (h r.name), :action => 'show', :id => r.id -%></td>
+	  <td><%= h r.url -%></td>
 	  <% unless disabled -%>
 	    <td><%= link_to image_tag('/images/delete.png', :alt => "delete"),
 	      {:action => 'delete', :id => r.id},
