--- a/plugins/patch_updates/app/views/repositories/show.html.erb
+++ b/plugins/patch_updates/app/views/repositories/show.html.erb
@@ -34,6 +34,11 @@
     </tr>
 
     <tr>
+	<td class="first" width="120"><strong><%= _("URL") -%></strong></td>
+	<td class="last"><%= f.text_field :url, :disabled => disabled -%></td>
+    </tr>
+
+    <tr>
 	<td class="first" width="120"><strong><%=_("Priority")-%></strong></td>
 	<td class="last"><%= f.text_field :priority, :disabled => disabled -%></td>
     </tr>
