--- a/plugins/users/app/views/users/edit.html.erb
+++ b/plugins/users/app/views/users/edit.html.erb
@@ -1,6 +1,25 @@
 <h1><%=_("Edit user %s") %@user.uid%></h1>
 <br>
 
+ <script language='javascript'>
+  $(document).ready(function(){
+   $(".details")[0].style.display="none";
+   $("#details_button")[0].textContent="Show Details"
+  })
+
+
+  function toggle_details() {
+    if ($(".details")[0].style.display=="none"){
+         $(".details")[0].style.display="inline";
+         $("#details_button")[0].textContent="Hide Details"
+    }
+        else {
+                $(".details")[0].style.display="none";
+                $("#details_button")[0].textContent="Show Details"
+             }
+   };
+ </script>
+
 <% disabled = ! @permissions[:usermodify] %>
 
 <% form_for(:user, @user, :url => { :action => "update" }, :html => { :method => :put } ) do |f| %>
@@ -19,6 +38,7 @@
 	<label><%=_("Default Group")%></label>
 	<%= f.text_field :groupname, :disabled => disabled %>
     </p>
+   <span class="details">
     <p>
 	<label><%=_("Home Directory")%></label>
 	<%= f.text_field :home_directory, :disabled => disabled %>
@@ -35,10 +55,16 @@
 	<label><%=_("UID Number")%></label>
 	<%= f.text_field :uid_number , :disabled => disabled %>
     </p>
+    </span>
     <p>
 	<label><%=_("Password")%></label>
 	<%= f.password_field :user_password, :disabled => disabled %>
     </p>
+    <p>
+        <label></label>
+        <A href="#" class="button" onclick="toggle_details();"><span id="details_button">Details</span></A>
+    </p>
+
     </fieldset>
     <p><%= f.submit _("Update"), :disabled => disabled %><%= link_to _('Back'), {:action => :index}, :onclick=>"$('#progress').show()", :class => "button"%></p>
   </div>
