--- a/plugins/mail_settings/app/views/mail_settings/index.html.erb
+++ b/plugins/mail_settings/app/views/mail_settings/index.html.erb
@@ -50,7 +50,7 @@
         <%=f.text_field :smtp_server, :disabled => disabled, :class => "smtp_server" %></p>
       <p>
         <label><%=_("Use secure connection (TLS)")%></label>
-        <%= f.select :transport_layer_security, [ [_("Never"), "NONE" ], [_("If available"), "MAY"], [_("Always"), "MUST"]], :disabled => disabled %></p>
+        <%= f.select :transport_layer_security, [ [_("Never"), "no" ], [_("If available"), "yes"], [_("Always"), "must"]], :disabled => disabled %></p>
       <p>
         <label><%=_("User name")%></label>
         <%= f.text_field :user, :disabled => disabled %></p>
