--- a/plugins/status/app/views/status/index.html.erb
+++ b/plugins/status/app/views/status/index.html.erb
@@ -12,7 +12,7 @@
 function refreshLogs() {
 
 <% @logs.each do |log| %>
-  $('#log-<%= log.id %>-console').load('/status/ajax_log_custom?id=<%= log.id %>&lines=5');
+  $('#<%= log_id(log.id) %>').load('/status/ajax_log_custom?id=<%= log.id %>&lines=5');
 <% end %>
 }
 
@@ -20,7 +20,6 @@ $(document).ready(function() {
   $.ajaxSetup ({  
     cache: false  
   });
-  //$('#log-console').addClass('busy');
   setInterval(refreshLogs, 10000); // refresh every 10 seconds
 });
 
@@ -41,18 +40,10 @@ $(document).ready(function() {initMenuBar();});
 
 <div class='plugin-icon'><img src='/images/monitoring.png'/><%=_("Status")%></div>
 <div class="plugin-content grid_12">
-  <% @logs.each do |log| %>
-  <h2><%= log.description %></h2>
-  <div id="<%="log-#{log.id}-console"%>" >
-    <%= log.path %>
-  </div>
-<% end %>
 
 
-<div id="log-console">
-</div>
-<% if @graphs %>
-  <ul id="menu">
+<ul id="menu">
+<% if @graphs  %>
   <% @graphs.each do |group| %>
     <li>
       <% if limits_reached(group) %>
@@ -94,8 +85,20 @@ $(document).ready(function() {initMenuBar();});
       </ul>
     </li>
   <% end %>
-  </ul>
 <% end %>
+<% @logs.each do |log| %>
+    <li>
+      <%=link_to_remote "<div class='status-icon ok'></div>" + log.description, 
+         :update => log_id(log.id),
+        :url => { :action => "ajax_log_custom", :id => log.id, :lines => 5 }%>
+      <ul>
+        <div id="<%="log-#{log.id}-console"%>" >
+          <%= log.path %>
+        </div>
+      </ul>
+    </li>
+<% end %>
+</ul>
 <p>
 <%= link_to  _("Edit Limits"), '/status/edit', :class => "button" %>
 </p>
