fixed form submit path to firewall/update

--- a/plugins/firewall/app/views/firewall/index.rhtml
+++ b/plugins/firewall/app/views/firewall/index.rhtml
@@ -3,7 +3,7 @@
 <div class='plugin-icon'><img src='/icons/yast-firewall.png' alt="firewall module"/><%=_("Firewall")%></div>
 
 <div class="plugin-content grid_12">
-  <% form_tag '/systemtime/update', {:class => 'container'} do %>
+  <% form_tag '/firewall/update', {:class => 'container'} do %>
   <fieldset id="" class="">
   <p>
       <label for="use_firewall"><%=_("Use Firewall")%></label>
