--- a/plugins/status/app/views/status/index.html.erb
+++ b/plugins/status/app/views/status/index.html.erb
@@ -84,9 +84,9 @@ $(document).ready(function() {initMenuBar();});
           <%= log.path %>
         </div>
       </ul>
-      <%= periodically_call_remote(:url => { :action => "ajax_log_custom", 
+      <%  periodically_call_remote(:url => { :action => "ajax_log_custom", 
                                    :id => log.id, :lines => default_lines }, :frequency => frequency, 
-                                   :update => log_id(log.id)) %>
+                                   :update => log_id(log.id)) #currently due missing '=' disabled%>
     </li>
 <% end %>
 </ul>
