--- a/plugins/status/app/views/status/_status_log.html.erb
+++ b/plugins/status/app/views/status/_status_log.html.erb
@@ -1,15 +1,28 @@
-<%=button_to_remote _("first"),
+<table  class="list" cellpadding="0" cellspacing="20">
+  <tr>
+     <td class="first">
+        <%=link_to_remote image_tag("go-top2.png"),
             :update => log_id(id),
             :url => { :action => "ajax_log_custom", :id => id, :lines => lines, :pos_begin =>1 } %>
-<%=button_to_remote _("previous"),
+     </td>
+     <td>
+        <%=link_to_remote image_tag("go-up2.png"),
             :update => log_id(id),
             :url => { :action => "ajax_log_custom", :id => id, :lines => lines, :pos_begin =>(position-lines) } %>
-<%=button_to_remote _("next"),
+     </td>
+     <td>
+        <%=link_to_remote image_tag("go-down2.png"),
             :update => log_id(id),
             :url => { :action => "ajax_log_custom", :id => id, :lines => lines, :pos_begin =>(position+lines) } %>
-<%=button_to_remote _("last"),
+     </td>
+     <td class="last">
+        <%=link_to_remote image_tag("go-bottom2.png"),
             :update => log_id(id),
             :url => { :action => "ajax_log_custom", :id => id, :lines => lines, :pos_begin =>0 } %>
+     </td>
+  </tr>
+</table>
+
 <pre>
 <%= content %>
 </pre>
